avance-otras-secciones

--- a/index.html
+++ b/index.html
@@ -101,10 +101,20 @@
 					</div>
 
 					<img src="assets/img/img-lyft/apple-store.svg" alt="apple">
-					<img src="assets/img/img-lyft/google-play.png" alt="google">
-					<img src="assets/img/img-lyft/microsoft.png" alt="Microsoft">
+					<img class="foto2" src="assets/img/img-lyft/google-play.png" alt="google">
+					<img class="foto3" src="assets/img/img-lyft/microsoft.png" alt="Microsoft">
 
-				</div>	
+					<div class="iconos">
+					<img src="assets/img/img-lyft/face.png" alt="face"></div>
+					<div class="iconos1">
+					<img src="assets/img/img-lyft/twitter.png" alt="twt"></div>
+					<div class="iconos2">
+					<img src="assets/img/img-lyft/instagram.png" alt="ins"></div>
+					<div class="texto-final">
+					<h6>2017Lyft,Inc.TermsPrivacy</h6>
+						
+					</div>
+				
 </footer>
 
 
